# sisumail

./: .gitignore  README.md  WHITEPAPER.md  go.mod  go.sum
.github/workflows/: ci.yml  release.yml
apps/desktop/: README.md  index.html  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
cmd/sisumail-dns/: limiter.go  main.go
cmd/sisumail-relay/: main.go  (+12 more)
config/: client.example.toml  relay.example.toml
conformance/: declaration.json
deploy/: install.sh
docs/: OPERATIONS.md  SECURITY_CHECKLIST.md  THREAT_MODEL.md  access-modes.md  alerts-runbook.md  attack-matrix.md  conformance.md  dns-delegation.md  dns-records.md  dogfood-notes-2026-02-11.md  logging-hygiene.md  operator-quickstart.md  product-doctrine.md  production-runbook.md  roadmap-sovereign-mail.md  security-release-gate.md
scripts/: artifact_integrity_check.sh  conformance_check.sh  dependency_vuln_scan.sh  dns_integrity_check.sh  dogfood_email_app_local.sh  gen_invite_pepper.sh  generate_well_known_sisu_node.sh  install_client.sh  package_release_local.sh  release_gate.sh  security_vector_runner.sh  smoke_acme_relay_live.sh  smoke_chat_offline_queue.sh  smoke_chat_relay.sh  smoke_chat_repl.sh  smoke_claim_v1.sh  smoke_hosted_shell_live.sh  smoke_hosted_shell_local.sh  smoke_production.sh  smoke_spool_on_connect.sh  smoke_spool_realtime.sh  vps_attack_surface_audit.sh  vps_deploy_go_canary.sh  vps_dns_cutover.sh  vps_dns_delegate_v6.sh  vps_enable_tier1_anyip.sh  vps_setup_web.sh
web/: apply.html  inboxes.html  index.html  quickstart.html
(+64 files in other folders)
