[package]
name = "sisumail-desktop"
version = "0.0.0"
description = "Sisumail Desktop"
authors = ["Sisumail"]
edition = "2021"

[lib]
name = "sisumail_desktop"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

